feat: jupyter modify

--- a/jupyter_practice.ipynb
+++ b/jupyter_practice.ipynb
@@ -17,12 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "922301cc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-24T12:52:23.930829Z",
-     "start_time": "2022-05-24T12:52:23.915949Z"
+     "end_time": "2022-05-24T13:00:03.570265Z",
+     "start_time": "2022-05-24T13:00:03.559944Z"
     }
    },
    "outputs": [
@@ -30,43 +30,72 @@
      "data": {
       "text/plain": [
        "array([[1, 2, 3],\n",
-       "       [4, 5, 6]])"
+       "       [4, 5, 6],\n",
+       "       [7, 8, 9]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = np.array([[1,2,3],[4,5,6]])\n",
+    "a = np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "f8d48c42",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-24T12:52:26.699358Z",
-     "start_time": "2022-05-24T12:52:26.684780Z"
+     "end_time": "2022-05-24T13:00:06.302387Z",
+     "start_time": "2022-05-24T13:00:06.285664Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2, 3)"
+       "(3, 3)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b3827c0b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-24T13:00:17.392109Z",
+     "start_time": "2022-05-24T13:00:17.380646Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3,  6,  9],\n",
+       "       [12, 15, 18],\n",
+       "       [21, 24, 27]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a*3"
    ]
   }
  ],
