feat: test done

--- a/jupyter_practice.ipynb
+++ b/jupyter_practice.ipynb
@@ -6,8 +6,8 @@
    "id": "c809f5ee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-24T13:05:00.467048Z",
-     "start_time": "2022-05-24T13:05:00.460946Z"
+     "end_time": "2022-05-24T13:13:39.922458Z",
+     "start_time": "2022-05-24T13:13:39.908519Z"
     }
    },
    "outputs": [],
@@ -21,8 +21,8 @@
    "id": "922301cc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-24T13:05:01.398904Z",
-     "start_time": "2022-05-24T13:05:01.381591Z"
+     "end_time": "2022-05-24T13:13:40.090757Z",
+     "start_time": "2022-05-24T13:13:40.076920Z"
     }
    },
    "outputs": [
@@ -50,8 +50,8 @@
    "id": "f8d48c42",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-24T13:05:02.039774Z",
-     "start_time": "2022-05-24T13:05:02.020912Z"
+     "end_time": "2022-05-24T13:13:40.273123Z",
+     "start_time": "2022-05-24T13:13:40.261298Z"
     }
    },
    "outputs": [
@@ -72,12 +72,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "b3827c0b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-24T13:05:02.605637Z",
-     "start_time": "2022-05-24T13:05:02.588181Z"
+     "end_time": "2022-05-24T13:13:44.183575Z",
+     "start_time": "2022-05-24T13:13:44.171971Z"
     }
    },
    "outputs": [
@@ -89,13 +89,41 @@
        "       [35, 40, 45]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a*5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "810398e8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-24T13:13:41.555628Z",
+     "start_time": "2022-05-24T13:13:41.549612Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2,  3,  4],\n",
+       "       [ 5,  6,  7],\n",
+       "       [ 8,  9, 10]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a+1"
    ]
   }
  ],
